--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ address {
   padding: 94px 0;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
 }
@@ -99,9 +99,7 @@ address {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .logo:hover {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-} */
+
 .logo:hover,
 .logo:focus {
   color: var(--akcent-color);
@@ -113,15 +111,7 @@ address {
   justify-content: center;
   margin-right: auto;
 }
-/* .link {
-  text-decoration: none;
-}
-.link:hover {
-  colo: var(--akcent-colorr);
-}
-.link:focus {
-  color: var(--akcent-color);
-} */
+
 .link-navig,
 .contact-list {
   display: flex;
@@ -167,15 +157,12 @@ address {
 .contact-footer:focus {
   color: var(--akcent-color);
 }
-/* .list {
-  list-style: none;
-} */
 
 .web {
   color: var(--akcent-color);
 }
 
-.nav {
+.header__nav {
   display: flex;
   align-items: center;
 }
@@ -262,20 +249,31 @@ address {
   clip-path: inset(50%);
   margin: -1px;
 }
-
+/* =======Наші переваги======= */
 .benefits {
   align-items: baseline;
   justify-content: center;
   width: auto;
 }
-.benefits-lists {
+.benefits__lists {
   display: flex;
   gap: 30px;
 }
-.benefits-items {
+.benefits__items {
   max-width: 270px;
 }
-.benefits-title {
+.benefits__border {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 270px;
+  height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+.benefits__title {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
@@ -283,29 +281,51 @@ address {
   padding-bottom: 10px;
   font-size: 14px;
 }
-.benefits-list {
+.benefits__list {
   line-height: 1.71;
   color: var(--minor-text);
 }
+/* Чим ми займаємося */
 .list-meta {
   padding-top: 0;
 }
-.list-meta-title {
+.list-meta__title {
   display: flex;
   gap: 30px;
 }
-.comand-list {
+.list-meta__thumb {
+  position: relative;
+}
+.thumb__mete {
+  position: absolute;
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  right: 0;
+  padding: 27px;
+}
+.list-meta__text {
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+}
+/* =====наша команда===== */
+.comand {
   background-color: #f5f4fa;
 }
 
-.section-title {
+.section__title {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
 }
 
-.team-name {
+.team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.9;
@@ -313,12 +333,12 @@ address {
   margin-bottom: 10px;
 }
 
-.comand-title {
+.comand__title {
   display: flex;
   gap: 30px;
 }
 
-.team-member {
+.team__member {
   background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -343,7 +363,7 @@ address {
   border-bottom: 1px solid #eeeeee;
 }
 
-.team-position {
+.team__position {
   font-size: 16px;
   line-height: 1.9;
   text-align: center;
@@ -418,29 +438,29 @@ address {
   gap: 8px;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
-.portfolio-item {
+.portfolio__item {
   width: calc((100% - 60px) / 3);
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio__item:hover,
+.portfolio__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.project-title {
+.project__title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
-.project-text {
+.project__text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
@@ -500,7 +520,7 @@ address {
   margin-right: 70px;
 } */
 /* ========Іконки=======  */
-.socials-link {
+.socials__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -526,8 +546,8 @@ address {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-link:hover,
-.socials-link:focus {
+.socials__link:hover,
+.socials__link:focus {
   background-color: var(--akcent-color);
   color: var(--white-color);
 }
@@ -541,12 +561,12 @@ address {
   gap: 10px;
 }
 
-.social-link {
+.social__link {
   fill: currentColor;
 }
 
-.social-link:hover,
-.social-link:focus {
+.social__link:hover,
+.social__link:focus {
   background-color: var(--akcent-color);
   color: var(--white-color);
 }
@@ -556,17 +576,8 @@ address {
   justify-content: center;
   gap: 10px;
 }
-.benefits-border {
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
-  width: 270px;
-  height: 120px;
-  background: #f5f4fa;
-  border-radius: 4px;
-}
+/* =====Наші клієнти===== */
 .client-list {
   display: flex;
 
@@ -603,7 +614,7 @@ address {
   fill: currentColor;
 }
 
-.portfolio-thumb {
+.portfolio__thumb {
   position: relative;
   overflow: hidden;
 }
@@ -623,11 +634,11 @@ address {
   align-items: center;
   justify-content: center;
 }
-.portfolio-item:hover .overley,
-.portfolio-item:focus .overley {
+.portfolio__item:hover .overley,
+.portfolio__item:focus .overley {
   transform: translateY(0%);
 }
-.overley-text {
+.overley__text {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
@@ -637,26 +648,6 @@ address {
   color: var(--white-color);
 }
 
-.meta-thumb {
-  position: relative;
-}
-.thumb-mete {
-  position: absolute;
-  background-color: rgba(47, 48, 58, 0.8);
-  width: 100%;
-  height: 70px;
-  bottom: 0;
-  right: 0;
-  padding: 27px;
-}
-.meta-text {
-  font-weight: 700;
-  line-height: 1.14;
-  text-align: center;
-  text-transform: uppercase;
-
-  color: var(--white-color);
-}
 /* ==========Modal========= */
 .backdrop {
   position: fixed;
@@ -857,6 +848,10 @@ address {
   margin-bottom: 10px;
 }
 
+.label:nth-child(4) {
+  margin-bottom: 20px;
+}
+
 .input {
   width: 100%;
   height: 40px;
@@ -889,7 +884,7 @@ address {
 /* ====================================
 ======================================= */
 
-.sign-ua-input {
+.sign-ua__input {
   width: 358px;
   height: 50px;
   background-color: var(--fone-color);
@@ -900,7 +895,7 @@ address {
   color: var(--white-color);
 }
 
-.sign-ua-input::placeholder {
+.sign-ua__input::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -908,7 +903,7 @@ address {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.sign-up-text {
+.sign-up__text {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
@@ -916,7 +911,7 @@ address {
   margin-bottom: 20px;
 }
 
-.sign-up-button {
+.sign-up___button {
   display: inline-flex;
   align-items: center;
   justify-content: space-evenly;
