--- a/css/styles.css
+++ b/css/styles.css
@@ -19,17 +19,17 @@
 /* =======RESET========= */
 
 /* ============================================================================================ */
-.container {
+/* .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   margin: 0 auto;
-}
-.section {
+} */
+/* .section {
   padding: 94px 0;
-}
+} */
 
 /* .header__container {
   display: flex;
