--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,10 @@
 @import 'utils/vars';
 @import 'utils/reset';
 @import 'utils/visually-hidden';
+@import 'utils/placeholder';
 // components
 @import 'components/body';
+@import 'components/container';
 @import 'components/header';
 @import 'components/logo';
 @import 'components/active';
@@ -19,6 +21,7 @@
 @import 'components/modal';
 @import 'components/sign-up';
 @import 'components/footer';
+
 
 
 
