--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 // utils
-@import 'utils/vars';
+@import 'utils/variables';
 @import 'utils/reset';
 @import 'utils/visually-hidden';
 @import 'utils/placeholder';
