--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,28 +1,25 @@
 // utils
 @import 'utils/variables';
-@import 'utils/reset';
 @import 'utils/visually-hidden';
 @import 'utils/placeholder';
+// base
+@import 'base/reset';
+@import 'base/body';
 // components
-@import 'components/body';
 @import 'components/container';
-@import 'components/header';
 @import 'components/logo';
 @import 'components/active';
 @import 'components/emphasis';
-@import 'components/hero';
-@import 'components/benefits';
-@import 'components/list-meta';
-@import 'components/comand';
-@import 'components/client-list';
 @import 'components/socials';
 @import 'components/button';
-@import 'components/portfolio';
 @import 'components/modal';
 @import 'components/sign-up';
-@import 'components/footer';
-
-
-
-
-
+// layout
+@import 'layout/benefits';
+@import 'layout/client-list';
+@import 'layout/comand';
+@import 'layout/footer';
+@import 'layout/header';
+@import 'layout/hero';
+@import 'layout/list-meta';
+@import 'layout/portfolio';
